[gd_scene load_steps=8 format=3 uid="uid://bpdpahxjuojo3"]

[ext_resource type="Texture2D" uid="uid://ctdtsu7c1dlfk" path="res://sprites/pacman/PAC-MAN.png" id="1_kcrxf"]
[ext_resource type="Script" uid="uid://d20kqcei3nn6" path="res://scripts/pacman.gd" id="1_kjyp3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kjyp3"]
radius = 9.0

[sub_resource type="Animation" id="Animation_ccr3a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pacman:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_kcrxf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pacman:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pacman:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pacman:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_utpjb"]
resource_name = "horizontal"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pacman:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_kcrxf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pacman:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pacman:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pacman:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ceynl"]
_data = {
&"RESET": SubResource("Animation_ccr3a"),
&"horizontal": SubResource("Animation_utpjb")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_utpjb"]
radius = 9.0

[node name="PacMan" type="CharacterBody2D"]
position = Vector2(413, 286)
script = ExtResource("1_kjyp3")

[node name="Pacman" type="Sprite2D" parent="."]
texture = ExtResource("1_kcrxf")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kjyp3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ceynl")
}

[node name="AreaDeteccao" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDeteccao"]
shape = SubResource("CircleShape2D_utpjb")

[connection signal="area_entered" from="AreaDeteccao" to="." method="_on_area_deteccao_area_entered"]
